Lots of campus fixes and updates